chore(ci): IT container resource adjustment
relates to #OPT-2513